get one case by case id for director
