# service/internal/transport/rest/director.go
@@ -8,6 +8,7 @@ import (
 	"encoding/json"
 	"errors"
 	"fmt"
+	"github.com/google/uuid"
 	"log"
 	"net/http"
 	"time"
@@ -17,6 +18,7 @@ const (
 	expertIDKey  = "id"
 	startTimeKey = "start_time"
 	endTimeKey   = "end_time"
+	caseIDKey    = "id"
 )
 
 type DirectorHandler struct {
@@ -37,30 +39,43 @@ func NewDirectorHandler(
 	}
 }
 
-// GetCases docs
-// @Summary Получение состояния случаев
+// GetCase docs
+// @Summary Получение состояния для случая
 // @Security ApiKeyAuth
 // @Tags director
-// @Description Получение состояния случаев. Воспользоваться может только директор
-// @ID director-cases-get
+// @Description Получение состояния для конкретного случая по его id. Воспользоваться может только директор
+// @ID director-case-get
 // @Produce  json
-// @Success 200 {object} []dto.CaseStatus
-// @Success 204 ""
+// @Param id query string true "id случая"
+// @Success 200 {object} dto.CaseStatus
+// @Failure 400,401,404 {object} response.Body
 // @Failure 500 {object} response.Body
 // @Failure default {object} response.Body
-// @Router /director/cases [get]
-func (h *DirectorHandler) GetCases(w http.ResponseWriter, r *http.Request) {
-	cases, err := h.directorService.GetCases()
+// @Router /director/case [get]
+func (h *DirectorHandler) GetCase(w http.ResponseWriter, r *http.Request) {
+	caseID := r.URL.Query().Get(caseIDKey)
+	if caseID == "" {
+		response.BadRequest(w, "id is empty")
+		return
+	}
+	_, err := uuid.Parse(caseID)
 	if err != nil {
-		if errors.Is(err, errs.ErrNoRows) {
-			response.NoContent(w)
+		response.BadRequest(w, "case id is not uuid")
+		return
+	}
+
+	caseStatus, err := h.directorService.GetCase(caseID)
+	if err != nil {
+		if errors.Is(err, errs.ErrNoCase) {
+			response.NotFound(w, "Case with input id not found")
 			return
 		}
 		log.Println(err)
 		response.InternalServerError(w)
+		return
 	}
 
-	casesBytes, err := json.Marshal(h.caseConverter.MapCaseStatusesToDto(cases))
+	casesBytes, err := json.Marshal(h.caseConverter.MapCaseStatusToDto(caseStatus))
 	if err != nil {
 		response.InternalServerError(w)
 	}
@@ -75,7 +90,7 @@ func (h *DirectorHandler) GetCases(w http.ResponseWriter, r *http.Request) {
 // @Description Получить количество всех случаев, правильно решенных случаев, неправильно решенных случаев, неизвестных случаев и максимальное количество подряд решенных задач. Воспользоваться может только директор
 // @ID director-analytics-expert
 // @Produce  json
-// @Param id query int true "id эксперта"
+// @Param id query string true "id эксперта"
 // @Param start_time query string true "Начало промежутка времени в формате yyyy-mm-dd"
 // @Param end_time query string true "Конец промежутка времени в формате yyyy-mm-dd"
 // @Success 200 {object} []dto.AnalyticsInterval
